# crisp

./: .gitignore  Makefile.am  README.md  configure.ac
src/lib/: crisp.h  env.c  env.h  eval.c  eval.h  gc.c  gc.h  init.c  init.h  print.c  print.h  read.c  read.h  symtab.c  symtab.h  term.c  term.h
